--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
     "@ionic/angular": "^6.1.9",
-    "@ngrx/store": "^14.3.2",
+    "@ngrx/store": "^14.3.0",
+    "@ngrx/store-devtools": "^14.3.1",
     "ionicons": "^6.0.3",
-    "rxjs": "~7.5.0",
+    "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
